@@ -2,20 +2,19 @@ package dku25.chatGraph.api.graph.service;
 
 import dku25.chatGraph.api.exception.ResourceNotFoundException;
 import dku25.chatGraph.api.graph.dto.MoveToNewTopicResponseDTO;
-import dku25.chatGraph.api.graph.dto.TopicTreeMapResponseDTO;
 import dku25.chatGraph.api.graph.dto.QuestionAnswerDTO;
+import dku25.chatGraph.api.graph.dto.TopicTreeMapResponseDTO;
 import dku25.chatGraph.api.graph.node.QuestionNode;
 import dku25.chatGraph.api.graph.node.TopicNode;
 import dku25.chatGraph.api.graph.node.UserNode;
 import dku25.chatGraph.api.graph.repository.QuestionRepository;
 import dku25.chatGraph.api.graph.repository.TopicRepository;
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
-
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 @Service
 public class QuestionService {
@@ -24,7 +23,8 @@ public class QuestionService {
     private final NodeUtilService nodeUtilService;
     private final UserNodeService userNodeService;
 
-    public QuestionService(QuestionRepository questionRepository, TopicRepository topicRepository, NodeUtilService nodeUtilService, UserNodeService userNodeService) {
+    public QuestionService(QuestionRepository questionRepository, TopicRepository topicRepository,
+                           NodeUtilService nodeUtilService, UserNodeService userNodeService) {
         this.questionRepository = questionRepository;
         this.topicRepository = topicRepository;
         this.nodeUtilService = nodeUtilService;
@@ -33,39 +33,15 @@ public class QuestionService {
 
     // Query Parameter로 QuestionNode 조회
     public List<TopicTreeMapResponseDTO> searchByKeyword(String keyword, String userId) {
-       // 1. 키워드 기반 질문 + 답변 조회
-            List<QuestionAnswerDTO> questionList = questionRepository.findQuestionAndAnswerByKeyword(keyword, userId);
+        List<QuestionAnswerDTO> questionNodes = findQuestionByKeyword(keyword, userId);
 
-        // 2. topicId 기준으로 그룹화
-        Map<String, List<QuestionAnswerDTO>> groupedByTopic = new HashMap<>();
+        Map<String, List<QuestionAnswerDTO>> groupedByTopic = groupBasedTopicId(questionNodes);
 
-        for (QuestionAnswerDTO dto : questionList) {
-            String questionId = dto.getQuestionId();
-
-            // 3. 각 질문에 대한 topicId 조회
-            String topicId = topicRepository.findTopicIdByQuestionId(questionId).orElseThrow(() -> new ResourceNotFoundException("토픽이 존재하지 않습니다.")); // 아래 @Query 참조
-
-            // 4. topicId 기준으로 리스트 분류
-            groupedByTopic
-                .computeIfAbsent(topicId, k -> new ArrayList<>())
-                .add(dto);
-        }
-
-        // 5. 결과 변환
-        List<TopicTreeMapResponseDTO> result = new ArrayList<>();
-        for (Map.Entry<String, List<QuestionAnswerDTO>> entry : groupedByTopic.entrySet()) {
-            String topicId = entry.getKey();
-            List<QuestionAnswerDTO> flatList = entry.getValue();
-
-            TopicTreeMapResponseDTO topicTree = nodeUtilService.buildMapFromFlatList(flatList, topicId, false);
-            result.add(topicTree);
-        }
-
-        return result;
+        return convertTopicTreeMapResult(groupedByTopic);
     }
 
     // QuestionNode 생성
-    public QuestionNode createQuestionNode(String prompt, QuestionNode previousQuestion){
+    public QuestionNode createQuestionNode(String prompt, QuestionNode previousQuestion) {
         return QuestionNode.createQuestion(prompt, previousQuestion);
     }
 
@@ -80,7 +56,6 @@ public class QuestionService {
     public void deleteQuestionNode(List<String> questionIds, String userId) {
         // 상위 노드가 질문 노드인지, 토픽 노드인지 판별
         for (String questionId : questionIds) {
-            System.out.println("questionId = " + questionId);
             nodeUtilService.checkOwnership(questionId, userId);
             questionRepository.deleteAndRelink(questionId);
         }
@@ -91,9 +66,8 @@ public class QuestionService {
     public List<String> copyQuestionNodes(List<String> sourceQuestionIds, String targetParentId, String userId) {
         // 권한 체크
         nodeUtilService.checkOwnership(targetParentId, userId);
-        for (String srcId : sourceQuestionIds) {
-            nodeUtilService.checkOwnership(srcId, userId);
-        }
+
+        checkQuestions(sourceQuestionIds, userId);
 
         return questionRepository.copyPartialQuestionTree(sourceQuestionIds, targetParentId);
     }
@@ -101,27 +75,19 @@ public class QuestionService {
     // 서브트리를 새로운 토픽으로 이동 (복제 + 원본 삭제)
     @Transactional
     public MoveToNewTopicResponseDTO moveToNewTopic(List<String> sourceQuestionIds, String userId) {
-        // 1. 권한 체크
-        for (String srcId : sourceQuestionIds) {
-            nodeUtilService.checkOwnership(srcId, userId);
-        }
+        checkQuestions(sourceQuestionIds, userId);
 
-        // 2. 최상위 노드의 text를 새 토픽 이름으로 사용
-        // (첫 번째 질문이 최상위 노드라고 가정)
-        String rootQuestionId = sourceQuestionIds.get(0);
-        QuestionNode rootQuestion = questionRepository.findById(rootQuestionId)
+        QuestionNode rootQuestion = questionRepository.findById(sourceQuestionIds.getFirst())
                 .orElseThrow(() -> new ResourceNotFoundException("질문을 찾을 수 없습니다."));
-        String newTopicName = rootQuestion.getText();
 
-        // 3. 새 토픽 생성
         UserNode user = userNodeService.getUserById(userId);
-        TopicNode newTopic = TopicNode.createTopic(newTopicName, user);
-        topicRepository.save(newTopic);
 
-        // 4. 서브트리를 새 토픽으로 복제 (최상위 노드가 토픽의 첫 질문이 됨)
-        List<String> newQuestionIds = questionRepository.copyPartialQuestionTree(sourceQuestionIds, newTopic.getTopicId());
+        String newTopicName = rootQuestion.getText();
+        TopicNode newTopic = createNewTopic(newTopicName, user);
 
-        // 5. 응답 생성
+        List<String> newQuestionIds = questionRepository.copyPartialQuestionTree(sourceQuestionIds,
+                newTopic.getTopicId());
+
         return MoveToNewTopicResponseDTO.builder()
                 .newTopicId(newTopic.getTopicId())
                 .newQuestionIds(newQuestionIds)
@@ -129,26 +95,19 @@ public class QuestionService {
     }
 
     @Transactional
-    public void shareQuestionNodes(List<String> sourceQuestionIds, String targetUserId, String userId){
-        // 1. 권한 체크
-        for (String srcId : sourceQuestionIds) {
-            nodeUtilService.checkOwnership(srcId, userId);
-        }
+    public void shareQuestionNodes(List<String> sourceQuestionIds, String targetUserId, String userId) {
+        checkQuestions(sourceQuestionIds, userId);
 
-        // 2. 상대 ID에 대한 유효성 검사와 상대 UserNode 가져옴
+        QuestionNode rootQuestion = questionRepository.findById(sourceQuestionIds.getFirst())
+                .orElseThrow(() -> new ResourceNotFoundException("질문을 찾을 수 없습니다."));
+
         UserNode targetUser = userNodeService.getUserByEmailId(targetUserId);
 
-        // 3. 새로 생성될 토픽의 이름은 최상위 질문의 Text
-        QuestionNode rootQuestion = questionRepository.findById(sourceQuestionIds.get(0))
-                .orElseThrow(() -> new ResourceNotFoundException("질문을 찾을 수 없습니다."));
         String newTopicName = rootQuestion.getText();
+        TopicNode newTopic = createNewTopic(newTopicName, targetUser);
 
-        // 4. 상대의 새로운 토픽 생성.
-        TopicNode newTopic = TopicNode.createTopic(newTopicName, targetUser);
-        topicRepository.save(newTopic);
-
-        // 5. 서브트리 상대 토픽에 복제
-        List<String> newQuestionIds = questionRepository.copyPartialQuestionTree(sourceQuestionIds, newTopic.getTopicId());
+        questionRepository.copyPartialQuestionTree(sourceQuestionIds,
+                newTopic.getTopicId());
     }
 
     public void favoriteQuestionNode(String questionId, String userId) {
@@ -158,5 +117,55 @@ public class QuestionService {
         // 원래의 isFavorite 속성의 반대 값으로 설정
         question.setFavorite(!question.isFavorite());
         questionRepository.save(question);
+    }
+
+    private List<QuestionAnswerDTO> findQuestionByKeyword(String keyword, String userId) {
+        return questionRepository.findQuestionAndAnswerByKeyword(keyword, userId);
+    }
+
+    private Map<String, List<QuestionAnswerDTO>> groupBasedTopicId(List<QuestionAnswerDTO> questions) {
+        Map<String, List<QuestionAnswerDTO>> groupedByTopic = new HashMap<>();
+
+        for (QuestionAnswerDTO dto : questions) {
+            String questionId = dto.getQuestionId();
+
+            String topicId = topicRepository.findTopicIdByQuestionId(questionId)
+                    .orElseThrow(() -> new ResourceNotFoundException("토픽이 존재하지 않습니다."));
+
+            // topicId 기준으로 리스트 분류
+            groupedByTopic
+                    .computeIfAbsent(topicId, k -> new ArrayList<>())
+                    .add(dto);
+        }
+
+        return groupedByTopic;
+    }
+
+    private List<TopicTreeMapResponseDTO> convertTopicTreeMapResult(
+            Map<String, List<QuestionAnswerDTO>> groupedByTopic) {
+        List<TopicTreeMapResponseDTO> result = new ArrayList<>();
+
+        for (Map.Entry<String, List<QuestionAnswerDTO>> entry : groupedByTopic.entrySet()) {
+            String topicId = entry.getKey();
+            List<QuestionAnswerDTO> flatList = entry.getValue();
+
+            TopicTreeMapResponseDTO topicTree = nodeUtilService.buildMapFromFlatList(flatList, topicId, false);
+            result.add(topicTree);
+        }
+
+        return result;
+    }
+
+    private void checkQuestions(List<String> sourceQuestionIds, String userId) {
+        for (String srcId : sourceQuestionIds) {
+            nodeUtilService.checkOwnership(srcId, userId);
+        }
+    }
+
+    private TopicNode createNewTopic(String topicName, UserNode user) {
+        TopicNode newTopic = TopicNode.createTopic(topicName, user);
+        topicRepository.save(newTopic);
+
+        return newTopic;
     }
 }
